tests/snapshots/cli__graph_op_info.snap
---
source: tests/cli.rs
expression: output
---
                                                                                                                                          Graph operations
merge (graph operation)

Merge multiple imported corpora into one corpus.

Configuration

┌name─────────────┬description───────────────────────────────────────────────────────────┐
│ error_policy    │ Define how to handle merging errrors.                                │
│                 │ Use "fail" if the whole conversion should fail, "drop" to remove the │
│                 │ documents having errors and "forward" to keep the documents and just │
│                 │ report the errors.                                                   │
├─────────────────┼──────────────────────────────────────────────────────────────────────┤
│ check_names     │                                                                      │
├─────────────────┼──────────────────────────────────────────────────────────────────────┤
│ keep_name       │                                                                      │
├─────────────────┼──────────────────────────────────────────────────────────────────────┤
│ optional_values │                                                                      │
├─────────────────┼──────────────────────────────────────────────────────────────────────┤
│ optional_chars  │                                                                      │
├─────────────────┼──────────────────────────────────────────────────────────────────────┤
│ silent          │                                                                      │
├─────────────────┼──────────────────────────────────────────────────────────────────────┤
│ report_details  │                                                                      │
├─────────────────┼──────────────────────────────────────────────────────────────────────┤
│ skip_components │                                                                      │
└─────────────────┴──────────────────────────────────────────────────────────────────────┘
