tests/snapshots/cli__module_info_relannis.snap
---
source: tests/cli.rs
expression: output
---
# Importers

## relannis (importer)

Importer the legacy (rel)ANNIS import format (<http://korpling.github.io/ANNIS/3.7/developer-guide/annisimportformat.html>).

*No Configuration*
