tests/snapshots/cli__run_empty_conversion-2.snap
---
source: tests/cli.rs
expression: output
---
Conversion starts with 3 steps
-------------------------------
create_empty_corpus [.]
create_annotation_graph
check
-------------------------------


