tests/snapshots/cli__run_empty_conversion_abs_path.snap
---
source: tests/cli.rs
expression: output
---
Conversion starts with 2 steps
-------------------------------
create_empty_corpus [.]
check
-------------------------------
Applying importer updates ...

