tests/snapshots/cli__run_failing_conversion-2.snap
---
source: tests/cli.rs
expression: output
---
Conversion starts with 2 steps
-------------------------------
import_graphml [doesnotexist.graphml]
create_annotation_graph
-------------------------------


