tests/snapshots/cli__run_failing_conversion.snap
---
source: tests/cli.rs
expression: output_err
---
Error: Import path does not exist: tests/data/import/failing/doesnotexist.graphml
