tests/snapshots/cli__unknown_module_info.snap
---
source: tests/cli.rs
expression: output
---
No module with name thiswillnotexist found. Run the `annotto list` command to get a list of all modules.
